@@ -45,6 +45,7 @@ class managesieve extends rcube_plugin
         $this->register_action('plugin.managesieve-save', array($this, 'managesieve_save'));
 
         if ($this->rc->task == 'settings') {
+            $this->add_hook('settings_actions', array($this, 'settings_actions'));
             $this->init_ui();
         }
         else if ($this->rc->task == 'mail') {
@@ -72,6 +73,16 @@ class managesieve extends rcube_plugin
         $this->include_script('managesieve.js');
 
         $this->ui_initialized = true;
+    }
+
+    /**
+     * Adds Filters section in Settings
+     */
+    function settings_actions($args)
+    {
+        // register as settings action
+        $args['actions'][] = array('action' => 'plugin.managesieve', 'class' => 'filter', 'label' => 'filters', 'domain' => 'managesieve');
+        return $args;
     }
 
     /**
