@@ -1,4 +1,5 @@
 - Nicely handle server-side modification of script names (#1489412)
+- Add Filters tab/section using plugin API hook
 
 * version 7.1 [2013-11-22]
 -----------------------------------------------------------
